# devlinker

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  config.yaml  pyproject.toml  requirements.txt
devlinker/: __init__.py  __main__.py  app.py  bootstrap.py  logging.py  settings.py
devlinker/application/: __init__.py  auth.py  rate_limit.py  service.py  workspace.py
devlinker/domain/: __init__.py  enums.py  errors.py  models.py  ports.py
devlinker/infrastructure/: __init__.py
devlinker/infrastructure/agents/: codex_cli.py  process.py  safety.py
devlinker/infrastructure/channels/: discord_adapter.py
devlinker/infrastructure/formatters/: __init__.py  discord_formatter.py  text_formatter.py
devlinker/infrastructure/notifications/: __init__.py  discord_webhook.py
devlinker/infrastructure/persistence/: __init__.py  approval_store.py
docs/: THAI_GUIDE.md
tests/: __init__.py  fakes.py  test_codex_cli.py  test_discord_adapter.py  test_discord_formatter.py  test_discord_webhook.py  test_process.py  test_service.py  test_settings.py  test_workspace.py
